Added mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Header -->
     <header>
-        <img src="./assets/SAAS landing page/white-logo.png" alt="">
+        <img style="display: none;" src="./assets/icons8-menu-30.png" alt="hamburger">
+        <img src="./assets/SAAS landing page/white-logo.png" alt="logo">
         <nav>
             <ul class="list">
                 <li class="list-items">Home</li>
@@ -21,6 +23,8 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Hero section -->
     <div class="hero-section">
         <div class="left text-section">
             <h1>Codext one of the best system in SAAS</h1>
@@ -28,9 +32,11 @@
                 Animi facilis repellendus </p>
         </div>
         <div class="right hero-img">
-            <img src="./assets/SAAS landing page/30495 [Converted]-01(1).svg" alt="">
+            <img src="./assets/SAAS landing page/30495 [Converted]-01(1).svg" alt="hero image">
         </div>
     </div>
+
+    <!-- Section-02 -->
     <div class="sec sec-02">
         <div class="left sec-02-img">
             <img src="./assets/SAAS landing page/Saas illustration-01.svg" alt="">
@@ -51,6 +57,8 @@
                 reprehenderit iste adipisci!</p>
         </div>
     </div>
+
+    <!-- card section -->
     <div class="sec sec-03">
         <div class="heading">
             <h1>We Provide Best Feature for Customer</h1>
